legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr57351.c-4.8.2-3.out.txt
pr57351.c:24:39: error: expected ‘;’, ‘,’ or ‘)’ before ‘retarray’
 all_l8 (gfc_array_l8 * const restrict retarray,
                                       ^
